testdata/baselines/reference/compiler/tluaDottedFunctionErrors.errors.txt
tluaDottedFunctionErrors.tlua(2,10): error TS2304: Cannot find name 'Unknown'.
tluaDottedFunctionErrors.tlua(9,12): error TS2339: Property 'h' does not exist on type '() => void'.
tluaDottedFunctionErrors.tlua(15,14): error TS2300: Duplicate identifier 'f'.
tluaDottedFunctionErrors.tlua(18,14): error TS2300: Duplicate identifier 'f'.
tluaDottedFunctionErrors.tlua(22,19): error TS1005: '(' expected.
tluaDottedFunctionErrors.tlua(22,20): error TS2304: Cannot find name 'f'.
tluaDottedFunctionErrors.tlua(22,23): error TS1005: ';' expected.
tluaDottedFunctionErrors.tlua(23,1): error TS1109: Expression expected.


==== tluaDottedFunctionErrors.tlua (8 errors) ====
    // Unknown base.
    function Unknown.f(): void
             ~~~~~~~
!!! error TS2304: Cannot find name 'Unknown'.
    end
    
    // A function is not a table and cannot carry members.
    local function g(): void
    end
    
    function g.h(): void
               ~
!!! error TS2339: Property 'h' does not exist on type '() => void'.
    end
    
    // Duplicate members.
    local Dup = {};
    
    function Dup.f(): void
                 ~
!!! error TS2300: Duplicate identifier 'f'.
!!! related TS6203 tluaDottedFunctionErrors.tlua:18:14: 'f' was also declared here.
    end
    
    function Dup.f(): void
                 ~
!!! error TS2300: Duplicate identifier 'f'.
!!! related TS6203 tluaDottedFunctionErrors.tlua:15:14: 'f' was also declared here.
    end
    
    // `local function` takes a plain name.
    local function Bad.f(): void
                      ~
!!! error TS1005: '(' expected.
                       ~
!!! error TS2304: Cannot find name 'f'.
                          ~
!!! error TS1005: ';' expected.
    end
    ~~~
!!! error TS1109: Expression expected.
    